--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head></head>
   <body>
-    <h1>kabigonn</h1>
-   Nya-su
+    <h1>松江南高校　◯◯◯のウェブサイト</h1>
   </body>
 </html>
+
